--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
             <!-- A-levels Card -->
             <div class="option-card bg-sky-100 p-6 rounded-2xl shadow-lg border-b-4 border-sky-400 cursor-pointer">
-                <span class="text-6xl mb-4" role="img" aria-label="Graduation Cap Icon">🎓</span>
+                <span class="text-6xl mb-4" role="img" aria-label="Graduation Cap Icon">🧭</span>
                 <h2 class="text-2xl font-bold text-sky-800 mb-2" id="al_title">A-levels</h2>
                 <p class="text-gray-700 text-lg" id="al_description">Academic subjects, ideal for university routes.</p>
                 <div class="card-details">
