--- a/index.html
+++ b/index.html
@@ -742,6 +742,50 @@
                 parent_who_to_talk_prompt: "З ким ми можемо поговорити за підтримкою?",
                 who_to_talk_prompt_text: "💡 **Навідна думка:** Хто у житті вашої дитини (або у вашій мережі) міг би запропонувати цінні поради або заохочення? Подумайте про кар'єрних консультантів, вчителів, друзів сім'ї або наставників.",
             },
+            ar: {
+  alevels_title: "المستويات المتقدمة (A-Levels)",
+  alevels_description: "مؤهلات أكاديمية عادة ما تُدرس على مدى عامين. يختار الطلاب 3 أو 4 مواد.",
+  alevels_reality: "غالبًا ما تكون ضرورية للجامعة ولكنها يمكن أن تؤدي أيضًا إلى التدريب المهني.",
+  alevels_stereotype: "“فقط للطلاب الأذكياء جدًا” — هذا غير صحيح! المستويات المتقدمة تناسب المتعلمين المنضبطين.",
+  alevels_progression: "يمكن أن تؤدي إلى الجامعة (بما في ذلك جامعات Russell Group — وهي جامعات بريطانية رائدة في البحث)، أو التدريب العالي / الجامعي، أو العمل.",
+  alevels_prompt: "💬 ما الذي يمكنني سؤاله للمدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
+
+  btecs_title: "شهادة BTEC",
+  btecs_description: "مؤهلات عملية تُركز على المهارات والمعرفة الخاصة بالصناعة. تشمل المشاريع والمهام الواقعية.",
+  btecs_reality: "معترف بها من قبل الجامعات وأصحاب العمل على حدٍ سواء، وتغطي مجموعة واسعة من المجالات.",
+  btecs_stereotype: "“للطلاب ذوي التحصيل المنخفض فقط” — خطأ. BTEC تناسب المتعلمين العمليين ويمكن أن تؤدي إلى جامعات مرموقة.",
+  btecs_progression: "الالتحاق بالجامعة أو التدريب المهني أو التوظيف المباشر، خاصة في القطاعات التقنية والإبداعية.",
+  btecs_prompt: "💬 كيف يمكنني دعم طفلي في اختيار مسار عملي يتوافق مع اهتماماته؟",
+
+  tlevels_title: "مستويات T",
+  tlevels_description: "مؤهلات تقنية جديدة مدتها عامين تجمع بين الدراسة والعمل. تركز على مجال محدد.",
+  tlevels_reality: "تُعادل 3 مستويات A وتضم تدريبًا عمليًا في بيئة العمل الحقيقية.",
+  tlevels_stereotype: "“أقل شأنًا من المستويات الأكاديمية” — خطأ. تُعد T-Levels طريقًا مباشرًا نحو الوظائف أو الجامعة.",
+  tlevels_progression: "مباشرة إلى التوظيف أو التدريب المهني أو الدراسة الجامعية المرتبطة بالمجال.",
+  tlevels_prompt: "💬 هل يمكنني زيارة مكان التدريب العملي أو مقابلة أصحاب العمل لمعرفة مدى ملاءمته؟",
+
+  apprenticeships_title: "التدريب المهني (Apprenticeships)",
+  apprenticeships_description: "العمل أثناء التعلم والحصول على راتب. يجمع بين المهارات العملية والدراسة.",
+  apprenticeships_reality: "تُتاح في مجالات متنوعة من الضيافة إلى الهندسة، وتتراوح بين مستويات مختلفة.",
+  apprenticeships_stereotype: "“بديل ضعيف للدراسة” — خطأ. التدريب المهني يوفر خبرة حقيقية وفرص تقدم مهني.",
+  apprenticeships_progression: "يؤدي إلى وظائف دائمة أو تدريب مهني أعلى أو حتى درجات جامعية ممولة بالكامل.",
+  apprenticeships_prompt: "💬 هل هناك برامج تدريب مهني متاحة في المجال الذي يهتم به طفلي؟",
+
+  ib_title: "البكالوريا الدولية (IB)",
+  ib_description: "برنامج أكاديمي دولي متوازن يضم ستة مجالات دراسية بالإضافة إلى مكونات فكرية ومجتمعية.",
+  ib_reality: "يحظى باحترام عالمي، ويُعد الطلاب للتعليم العالي في مختلف البلدان.",
+  ib_stereotype: "“فقط للطلاب المتميزين” — ليس بالضرورة. يتطلب التوازن وليس فقط الذكاء الأكاديمي.",
+  ib_progression: "التقديم للجامعات في المملكة المتحدة والخارج، والالتحاق بتخصصات متنوعة.",
+  ib_prompt: "💬 هل يستطيع طفلي التوازن بين المتطلبات الأكاديمية والمجتمعية لهذا البرنامج؟",
+
+  work_title: "العمل والتدريب",
+  work_description: "يشمل فرص العمل المباشر، وبرامج التدريب قصيرة الأمد، والتطوع، والمبادرات المجتمعية.",
+  work_reality: "يمكن أن تكون بداية مفيدة لاكتساب الخبرة، خاصة عند عدم اليقين بشأن المسارات التعليمية.",
+  work_stereotype: "“يعني الفشل الأكاديمي” — خطأ. قد يكون خطوة استراتيجية نحو النجاح المهني.",
+  work_progression: "يؤدي إلى توظيف مستقر أو تأهيل لاحق أو إعادة الالتحاق بالتعليم عند الجاهزية.",
+  work_prompt: "💬 ما هي فرص التدريب أو العمل المرنة التي يمكن أن تساعد طفلي على بناء ثقته وخبرته؟"
+}
+
             bn: { // বাংলা (Bengali)
                 doc_title: "আপনার সন্তানের পরবর্তী পদক্ষেপগুলি সমর্থন করা: একাদশ শ্রেণীর পরে ১৬+ বিকল্প",
                 main_title_part1: "আপনার ভবিষ্যত উন্মোচিত:",
