--- a/index.html
+++ b/index.html
@@ -742,49 +742,102 @@
                 parent_who_to_talk_prompt: "З ким ми можемо поговорити за підтримкою?",
                 who_to_talk_prompt_text: "💡 **Навідна думка:** Хто у житті вашої дитини (або у вашій мережі) міг би запропонувати цінні поради або заохочення? Подумайте про кар'єрних консультантів, вчителів, друзів сім'ї або наставників.",
             },
-            ar: {
-  alevels_title: "المستويات المتقدمة (A-Levels)",
-  alevels_description: "مؤهلات أكاديمية عادة ما تُدرس على مدى عامين. يختار الطلاب 3 أو 4 مواد.",
-  alevels_reality: "غالبًا ما تكون ضرورية للجامعة ولكنها يمكن أن تؤدي أيضًا إلى التدريب المهني.",
-  alevels_stereotype: "“فقط للطلاب الأذكياء جدًا” — هذا غير صحيح! المستويات المتقدمة تناسب المتعلمين المنضبطين.",
-  alevels_progression: "يمكن أن تؤدي إلى الجامعة (بما في ذلك جامعات Russell Group — وهي جامعات بريطانية رائدة في البحث)، أو التدريب العالي / الجامعي، أو العمل.",
-  alevels_prompt: "💬 ما الذي يمكنني سؤاله للمدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
+            
+ ar: {
+    doc_title: "دعم الخطوات التالية لطفلك: خيارات ما بعد الصف 11",
+    main_title_part1: "مستقبلك مفتوح:",
+    main_title_part2: "استكشاف خيارات ما بعد سن 16",
+    intro_text: "قد يكون مساعدة طفلك على اتخاذ قرار بشأن مستقبله بعد الصف 11 خطوة كبيرة. يشرح هذا الدليل الخيارات الرئيسية وكيف يمكنك دعمه في اتخاذ القرار.",
 
-  btecs_title: "شهادة BTEC",
-  btecs_description: "مؤهلات عملية تُركز على المهارات والمعرفة الخاصة بالصناعة. تشمل المشاريع والمهام الواقعية.",
-  btecs_reality: "معترف بها من قبل الجامعات وأصحاب العمل على حدٍ سواء، وتغطي مجموعة واسعة من المجالات.",
-  btecs_stereotype: "“للطلاب ذوي التحصيل المنخفض فقط” — خطأ. BTEC تناسب المتعلمين العمليين ويمكن أن تؤدي إلى جامعات مرموقة.",
-  btecs_progression: "الالتحاق بالجامعة أو التدريب المهني أو التوظيف المباشر، خاصة في القطاعات التقنية والإبداعية.",
-  btecs_prompt: "💬 كيف يمكنني دعم طفلي في اختيار مسار عملي يتوافق مع اهتماماته؟",
+    // Titles
+    al_title: "المستويات المتقدمة (A-Levels)",
+    btec_title: "شهادات BTEC",
+    tlevel_title: "مستويات T (T-Levels)",
+    ib_title: "البكالوريا الدولية (IB)",
+    app_title: "البرامج التدريبية (Apprenticeships)",
+    wwt_title: "العمل مع التدريب",
 
-  tlevels_title: "مستويات T",
-  tlevels_description: "مؤهلات تقنية جديدة مدتها عامين تجمع بين الدراسة والعمل. تركز على مجال محدد.",
-  tlevels_reality: "تُعادل 3 مستويات A وتضم تدريبًا عمليًا في بيئة العمل الحقيقية.",
-  tlevels_stereotype: "“أقل شأنًا من المستويات الأكاديمية” — خطأ. تُعد T-Levels طريقًا مباشرًا نحو الوظائف أو الجامعة.",
-  tlevels_progression: "مباشرة إلى التوظيف أو التدريب المهني أو الدراسة الجامعية المرتبطة بالمجال.",
-  tlevels_prompt: "💬 هل يمكنني زيارة مكان التدريب العملي أو مقابلة أصحاب العمل لمعرفة مدى ملاءمته؟",
+    // Descriptions
+    al_description: "مواد أكاديمية، مثالية للمسار الجامعي.",
+    btec_description: "تقييم عملي ومبني على المشاريع، يركز على المهارات المهنية.",
+    tlevel_description: "مزيج من التعلم في الفصول الدراسية والخبرة العملية في مكان العمل.",
 
-  apprenticeships_title: "التدريب المهني (Apprenticeships)",
-  apprenticeships_description: "العمل أثناء التعلم والحصول على راتب. يجمع بين المهارات العملية والدراسة.",
-  apprenticeships_reality: "تُتاح في مجالات متنوعة من الضيافة إلى الهندسة، وتتراوح بين مستويات مختلفة.",
-  apprenticeships_stereotype: "“بديل ضعيف للدراسة” — خطأ. التدريب المهني يوفر خبرة حقيقية وفرص تقدم مهني.",
-  apprenticeships_progression: "يؤدي إلى وظائف دائمة أو تدريب مهني أعلى أو حتى درجات جامعية ممولة بالكامل.",
-  apprenticeships_prompt: "💬 هل هناك برامج تدريب مهني متاحة في المجال الذي يهتم به طفلي؟",
+    // A-Levels
+    al_key_info_header: "معلومات أساسية وواقع:",
+    al_what_label: "ما هو:", al_what_text: "برنامج أكاديمي لمدة سنتين يتضمن التعمق في 3–4 مواد.",
+    al_entry_label: "المتطلبات:", al_entry_text: "5 مواد GCSE أو أكثر بتقدير 4/C أو أعلى (أحيانًا أعلى في المواد المختارة).",
+    al_assessment_label: "التقييم:", al_assessment_text: "معظمها **امتحانات نهائية** مع بعض الأعمال الدراسية.",
+    al_progression_label: "المسار المستقبلي:", al_progression_text: "الطريق الرئيسي إلى **الجامعة**، وأيضًا إلى برامج التدريب المهني العليا أو الجامعية.",
+    al_stereotype_label: "الصورة النمطية:", al_stereotype_text: "“فقط للطلاب المتفوقين” أو “مسار جامعي فقط”.",
+    al_reality_label: "الواقع:", al_reality_text: "يطور مهارات التفكير التحليلي ويفتح العديد من الأبواب. ليس المسار الوحيد للجامعة.",
+    al_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
 
-  ib_title: "البكالوريا الدولية (IB)",
-  ib_description: "برنامج أكاديمي دولي متوازن يضم ستة مجالات دراسية بالإضافة إلى مكونات فكرية ومجتمعية.",
-  ib_reality: "يحظى باحترام عالمي، ويُعد الطلاب للتعليم العالي في مختلف البلدان.",
-  ib_stereotype: "“فقط للطلاب المتميزين” — ليس بالضرورة. يتطلب التوازن وليس فقط الذكاء الأكاديمي.",
-  ib_progression: "التقديم للجامعات في المملكة المتحدة والخارج، والالتحاق بتخصصات متنوعة.",
-  ib_prompt: "💬 هل يستطيع طفلي التوازن بين المتطلبات الأكاديمية والمجتمعية لهذا البرنامج؟",
+    // BTECs
+    btec_key_info_header: "معلومات أساسية وواقع:",
+    btec_what_label: "ما هو:", btec_what_text: "تعلم تطبيقي في مجالات محددة مثل الصحة أو الأعمال أو الرياضة.",
+    btec_entry_label: "المتطلبات:", btec_entry_text: "المستوى الثاني يتطلب عادة بعض شهادات GCSE بدرجة 3/D. المستوى الثالث يتطلب حوالي 5 مواد بدرجة 4/C أو أعلى، بما في ذلك الإنجليزية والرياضيات.",
+    btec_entry_sidenote: "قد تختلف المتطلبات حسب الكلية أو التخصص. تحقق دائمًا من موقع المؤسسة التعليمية.",
+    btec_assessment_label: "التقييم:", btec_assessment_text: "غالبًا **مشاريع وأعمال دراسية**، مع بعض الامتحانات أو التطبيقات العملية.",
+    btec_progression_label: "المسار المستقبلي:", btec_progression_text: "مقبولة في **الجامعات** (تعادل 1–3 A-Levels)، أو برامج تدريب مهني، أو فرص عمل مباشرة.",
+    btec_stereotype_label: "الصورة النمطية:", btec_stereotype_text: "“أسهل من A-Levels” أو “غير مناسبة للجامعة”.",
+    btec_reality_label: "الواقع:", btec_reality_text: "مسار صارم يطوّر مهارات الحياة العملية. مثالي لمن يفضل التقييم المستمر.",
+    btec_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
 
-  work_title: "العمل والتدريب",
-  work_description: "يشمل فرص العمل المباشر، وبرامج التدريب قصيرة الأمد، والتطوع، والمبادرات المجتمعية.",
-  work_reality: "يمكن أن تكون بداية مفيدة لاكتساب الخبرة، خاصة عند عدم اليقين بشأن المسارات التعليمية.",
-  work_stereotype: "“يعني الفشل الأكاديمي” — خطأ. قد يكون خطوة استراتيجية نحو النجاح المهني.",
-  work_progression: "يؤدي إلى توظيف مستقر أو تأهيل لاحق أو إعادة الالتحاق بالتعليم عند الجاهزية.",
-  work_prompt: "💬 ما هي فرص التدريب أو العمل المرنة التي يمكن أن تساعد طفلي على بناء ثقته وخبرته؟"
+    // T-Levels (start)
+    tlevel_key_info_header: "معلومات أساسية وواقع:",
+    tlevel_what_label: "ما هو:", tlevel_what_text: "برنامج تقني جديد لمدة سنتين، 80٪ تعلم نظري، 20٪ تدريب عملي في القطاع الصناعي (45+ يوم).",
+    tlevel_entry_label: "المتطلبات:", tlevel_entry_text: "عادة 5 مواد GCSE بتقدير 4/C أو أعلى، بما في ذلك الإنجليزية والرياضيات.",
+    tlevel_assessment_label: "التقييم:", tlevel_assessment_text: "مزيج من **المهام العملية والتقييمات الدراسية**.",
+    tlevel_progression_label: "المسار المستقبلي:", tlevel_progression_text: "يؤدي إلى **التوظيف، التدريب المهني العالي أو الجامعي، أو الجامعة** (بعض التخصصات فقط).",
+    tlevel_stereotype_label: "الصورة النمطية:", tlevel_stereotype_text: "“بديل أقل شأناً من A-Levels أو BTECs”.",
+    tlevel_reality_label: "الواقع:", tlevel_reality_text: "مؤهل قوي للمجالات المهنية التقنية، بتوازن فريد بين الدراسة والخبرة العملية.",
+    tlevel_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
+
+    // IB
+    ib_key_info_header: "معلومات أساسية وواقع:",
+    ib_what_label: "ما هو:", ib_what_text: "برنامج دولي مدته سنتان يشمل 6 مواد ومكونات مثل الأطروحة والأنشطة المجتمعية.",
+    ib_entry_label: "المتطلبات:", ib_entry_text: "عادة درجات جيدة في GCSE. تتطلب مهارات كتابة وتحليل قوية.",
+    ib_assessment_label: "التقييم:", ib_assessment_text: "**امتحانات نهائية** بالإضافة إلى مشاريع ومهام بحثية.",
+    ib_progression_label: "المسار المستقبلي:", ib_progression_text: "مقبولة على نطاق واسع في **الجامعات البريطانية والدولية**.",
+    ib_stereotype_label: "الصورة النمطية:", ib_stereotype_text: "“صعب جدًا للطلاب العاديين” أو “فقط للمتفوقين عالميًا”.",
+    ib_reality_label: "الواقع:", ib_reality_text: "يتطلب التوازن والانضباط، لكنه يعزز التفكير النقدي والوعي العالمي.",
+    ib_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
+
+    // Apprenticeships
+    app_key_info_header: "معلومات أساسية وواقع:",
+    app_what_label: "ما هو:", app_what_text: "وظيفة مدفوعة الأجر + دراسة. يكتسب المتعلم خبرة أثناء العمل ويحصل على مؤهل.",
+    app_entry_label: "المتطلبات:", app_entry_text: "تختلف حسب المستوى. برامج المستوى 2 و3 غالبًا ما تتطلب بعض GCSEs.",
+    app_assessment_label: "التقييم:", app_assessment_text: "تقييم عملي، مشاريع، واختبارات معرفة مهنية.",
+    app_progression_label: "المسار المستقبلي:", app_progression_text: "التوظيف، **التدريب المهني العالي أو الجامعي، أو مؤهلات معادلة لدرجة البكالوريوس**.",
+    app_stereotype_label: "الصورة النمطية:", app_stereotype_text: "“للأعمال اليدوية فقط” أو “بديل للطلاب غير الأكاديميين”.",
+    app_reality_label: "الواقع:", app_reality_text: "التدريب متاح في **مجالات مثل القانون، التكنولوجيا، المالية، التعليم، والعلوم** – ويعزز المهارات الوظيفية الواقعية.",
+    app_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
+
+    // Work and Training
+    wwt_key_info_header: "معلومات أساسية وواقع:",
+    wwt_what_label: "ما هو:", wwt_what_text: "العمل، الدورات التأسيسية، برامج التدريب قصيرة الأجل، فرص إعادة الاندماج أو المبادرات المجتمعية.",
+    wwt_entry_label: "المتطلبات:", wwt_entry_text: "تختلف بشكل كبير حسب المسار. غالبًا ما تكون مرنة وتشمل الدعم المخصص.",
+    wwt_assessment_label: "التقييم:", wwt_assessment_text: "لا يوجد تقييم رسمي في بعض البرامج، لكن قد يشمل مهام، مراقبة، أو تدريب.",
+    wwt_progression_label: "المسار المستقبلي:", wwt_progression_text: "بداية جيدة نحو التدريب أو العمل، أو **العودة إلى التعليم عند الجاهزية**.",
+    wwt_stereotype_label: "الصورة النمطية:", wwt_stereotype_text: "“مسار لغير المهتمين بالتعليم فقط”.",
+    wwt_reality_label: "الواقع:", wwt_reality_text: "خطوة استراتيجية قد تساعد المتعلم على اكتشاف اهتماماته، وبناء الثقة، وتطوير المهارات.",
+    wwt_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
+
+    // Sidenotes and Russell Group explanation
+    other_options_note: "⚙️ توجد أيضًا مسارات أخرى مثل البرامج المدعومة والدورات التأسيسية ومبادرات إعادة الاندماج، وهي مصممة لدعم المتعلمين ذوي الاحتياجات الإضافية أو ظروف الحياة المعقدة.",
+    russell_group_explainer: "🎓 *جامعات Russell Group هي جامعات بريطانية رائدة تشتهر بجودة البحث والتعليم. بعض الطلاب يفضلونها، لكن هناك العديد من الجامعات الرائعة الأخرى المناسبة لاحتياجات مختلفة.*",
+
+    // Side 2 reflection
+    side2_title: "كيف يمكنني دعم طفلي؟",
+    side2_reflection: "قم باختيار سؤال واحد على الأقل من كل قسم أدناه وناقشه مع طفلك أو المدرسة أو مستشار مهني.",
+    side2_section1: "ما الذي يجب أن أستكشفه؟",
+    side2_section2: "ما الذي يجب أن أسأله؟",
+    side2_section3: "من يمكنه مساعدتي؟",
+    side2_prompt1: "💭 هل هناك كلية أو مسار لا أفهمه؟ من يمكنني التحدث إليه؟",
+    side2_prompt2: "❓ ما الأسئلة التي أحتاج إلى إجابة عنها؟ ماذا يهمنا أكثر – المسافة؟ بيئة التعلم؟ الدعم؟ الخيارات المستقبلية؟",
+    side2_prompt3: "🤝 من حولي يمكنه دعم هذه المحادثة – داخل المدرسة، في العائلة، في المجتمع؟"
 }
+
 
             bn: { // বাংলা (Bengali)
                 doc_title: "আপনার সন্তানের পরবর্তী পদক্ষেপগুলি সমর্থন করা: একাদশ শ্রেণীর পরে ১৬+ বিকল্প",
