--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
             <!-- A-levels Card -->
             <div class="option-card bg-sky-100 p-6 rounded-2xl shadow-lg border-b-4 border-sky-400 cursor-pointer">
-                <span class="text-6xl mb-4" role="img" aria-label="Graduation Cap Icon">🧭</span>
+                <span class="text-6xl mb-4" role="img" aria-label="Graduation Cap Icon">🎓</span>
                 <h2 class="text-2xl font-bold text-sky-800 mb-2" id="al_title">A-levels</h2>
                 <p class="text-gray-700 text-lg" id="al_description">Academic subjects, ideal for university routes.</p>
                 <div class="card-details">
@@ -742,103 +742,6 @@
                 parent_who_to_talk_prompt: "З ким ми можемо поговорити за підтримкою?",
                 who_to_talk_prompt_text: "💡 **Навідна думка:** Хто у житті вашої дитини (або у вашій мережі) міг би запропонувати цінні поради або заохочення? Подумайте про кар'єрних консультантів, вчителів, друзів сім'ї або наставників.",
             },
-            
- ar: {
-    doc_title: "دعم الخطوات التالية لطفلك: خيارات ما بعد الصف 11",
-    main_title_part1: "مستقبلك مفتوح:",
-    main_title_part2: "استكشاف خيارات ما بعد سن 16",
-    intro_text: "قد يكون مساعدة طفلك على اتخاذ قرار بشأن مستقبله بعد الصف 11 خطوة كبيرة. يشرح هذا الدليل الخيارات الرئيسية وكيف يمكنك دعمه في اتخاذ القرار.",
-
-    // Titles
-    al_title: "المستويات المتقدمة (A-Levels)",
-    btec_title: "شهادات BTEC",
-    tlevel_title: "مستويات T (T-Levels)",
-    ib_title: "البكالوريا الدولية (IB)",
-    app_title: "البرامج التدريبية (Apprenticeships)",
-    wwt_title: "العمل مع التدريب",
-
-    // Descriptions
-    al_description: "مواد أكاديمية، مثالية للمسار الجامعي.",
-    btec_description: "تقييم عملي ومبني على المشاريع، يركز على المهارات المهنية.",
-    tlevel_description: "مزيج من التعلم في الفصول الدراسية والخبرة العملية في مكان العمل.",
-
-    // A-Levels
-    al_key_info_header: "معلومات أساسية وواقع:",
-    al_what_label: "ما هو:", al_what_text: "برنامج أكاديمي لمدة سنتين يتضمن التعمق في 3–4 مواد.",
-    al_entry_label: "المتطلبات:", al_entry_text: "5 مواد GCSE أو أكثر بتقدير 4/C أو أعلى (أحيانًا أعلى في المواد المختارة).",
-    al_assessment_label: "التقييم:", al_assessment_text: "معظمها **امتحانات نهائية** مع بعض الأعمال الدراسية.",
-    al_progression_label: "المسار المستقبلي:", al_progression_text: "الطريق الرئيسي إلى **الجامعة**، وأيضًا إلى برامج التدريب المهني العليا أو الجامعية.",
-    al_stereotype_label: "الصورة النمطية:", al_stereotype_text: "“فقط للطلاب المتفوقين” أو “مسار جامعي فقط”.",
-    al_reality_label: "الواقع:", al_reality_text: "يطور مهارات التفكير التحليلي ويفتح العديد من الأبواب. ليس المسار الوحيد للجامعة.",
-    al_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
-
-    // BTECs
-    btec_key_info_header: "معلومات أساسية وواقع:",
-    btec_what_label: "ما هو:", btec_what_text: "تعلم تطبيقي في مجالات محددة مثل الصحة أو الأعمال أو الرياضة.",
-    btec_entry_label: "المتطلبات:", btec_entry_text: "المستوى الثاني يتطلب عادة بعض شهادات GCSE بدرجة 3/D. المستوى الثالث يتطلب حوالي 5 مواد بدرجة 4/C أو أعلى، بما في ذلك الإنجليزية والرياضيات.",
-    btec_entry_sidenote: "قد تختلف المتطلبات حسب الكلية أو التخصص. تحقق دائمًا من موقع المؤسسة التعليمية.",
-    btec_assessment_label: "التقييم:", btec_assessment_text: "غالبًا **مشاريع وأعمال دراسية**، مع بعض الامتحانات أو التطبيقات العملية.",
-    btec_progression_label: "المسار المستقبلي:", btec_progression_text: "مقبولة في **الجامعات** (تعادل 1–3 A-Levels)، أو برامج تدريب مهني، أو فرص عمل مباشرة.",
-    btec_stereotype_label: "الصورة النمطية:", btec_stereotype_text: "“أسهل من A-Levels” أو “غير مناسبة للجامعة”.",
-    btec_reality_label: "الواقع:", btec_reality_text: "مسار صارم يطوّر مهارات الحياة العملية. مثالي لمن يفضل التقييم المستمر.",
-    btec_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
-
-    // T-Levels (start)
-    tlevel_key_info_header: "معلومات أساسية وواقع:",
-    tlevel_what_label: "ما هو:", tlevel_what_text: "برنامج تقني جديد لمدة سنتين، 80٪ تعلم نظري، 20٪ تدريب عملي في القطاع الصناعي (45+ يوم).",
-    tlevel_entry_label: "المتطلبات:", tlevel_entry_text: "عادة 5 مواد GCSE بتقدير 4/C أو أعلى، بما في ذلك الإنجليزية والرياضيات.",
-    tlevel_assessment_label: "التقييم:", tlevel_assessment_text: "مزيج من **المهام العملية والتقييمات الدراسية**.",
-    tlevel_progression_label: "المسار المستقبلي:", tlevel_progression_text: "يؤدي إلى **التوظيف، التدريب المهني العالي أو الجامعي، أو الجامعة** (بعض التخصصات فقط).",
-    tlevel_stereotype_label: "الصورة النمطية:", tlevel_stereotype_text: "“بديل أقل شأناً من A-Levels أو BTECs”.",
-    tlevel_reality_label: "الواقع:", tlevel_reality_text: "مؤهل قوي للمجالات المهنية التقنية، بتوازن فريد بين الدراسة والخبرة العملية.",
-    tlevel_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
-
-    // IB
-    ib_key_info_header: "معلومات أساسية وواقع:",
-    ib_what_label: "ما هو:", ib_what_text: "برنامج دولي مدته سنتان يشمل 6 مواد ومكونات مثل الأطروحة والأنشطة المجتمعية.",
-    ib_entry_label: "المتطلبات:", ib_entry_text: "عادة درجات جيدة في GCSE. تتطلب مهارات كتابة وتحليل قوية.",
-    ib_assessment_label: "التقييم:", ib_assessment_text: "**امتحانات نهائية** بالإضافة إلى مشاريع ومهام بحثية.",
-    ib_progression_label: "المسار المستقبلي:", ib_progression_text: "مقبولة على نطاق واسع في **الجامعات البريطانية والدولية**.",
-    ib_stereotype_label: "الصورة النمطية:", ib_stereotype_text: "“صعب جدًا للطلاب العاديين” أو “فقط للمتفوقين عالميًا”.",
-    ib_reality_label: "الواقع:", ib_reality_text: "يتطلب التوازن والانضباط، لكنه يعزز التفكير النقدي والوعي العالمي.",
-    ib_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
-
-    // Apprenticeships
-    app_key_info_header: "معلومات أساسية وواقع:",
-    app_what_label: "ما هو:", app_what_text: "وظيفة مدفوعة الأجر + دراسة. يكتسب المتعلم خبرة أثناء العمل ويحصل على مؤهل.",
-    app_entry_label: "المتطلبات:", app_entry_text: "تختلف حسب المستوى. برامج المستوى 2 و3 غالبًا ما تتطلب بعض GCSEs.",
-    app_assessment_label: "التقييم:", app_assessment_text: "تقييم عملي، مشاريع، واختبارات معرفة مهنية.",
-    app_progression_label: "المسار المستقبلي:", app_progression_text: "التوظيف، **التدريب المهني العالي أو الجامعي، أو مؤهلات معادلة لدرجة البكالوريوس**.",
-    app_stereotype_label: "الصورة النمطية:", app_stereotype_text: "“للأعمال اليدوية فقط” أو “بديل للطلاب غير الأكاديميين”.",
-    app_reality_label: "الواقع:", app_reality_text: "التدريب متاح في **مجالات مثل القانون، التكنولوجيا، المالية، التعليم، والعلوم** – ويعزز المهارات الوظيفية الواقعية.",
-    app_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
-
-    // Work and Training
-    wwt_key_info_header: "معلومات أساسية وواقع:",
-    wwt_what_label: "ما هو:", wwt_what_text: "العمل، الدورات التأسيسية، برامج التدريب قصيرة الأجل، فرص إعادة الاندماج أو المبادرات المجتمعية.",
-    wwt_entry_label: "المتطلبات:", wwt_entry_text: "تختلف بشكل كبير حسب المسار. غالبًا ما تكون مرنة وتشمل الدعم المخصص.",
-    wwt_assessment_label: "التقييم:", wwt_assessment_text: "لا يوجد تقييم رسمي في بعض البرامج، لكن قد يشمل مهام، مراقبة، أو تدريب.",
-    wwt_progression_label: "المسار المستقبلي:", wwt_progression_text: "بداية جيدة نحو التدريب أو العمل، أو **العودة إلى التعليم عند الجاهزية**.",
-    wwt_stereotype_label: "الصورة النمطية:", wwt_stereotype_text: "“مسار لغير المهتمين بالتعليم فقط”.",
-    wwt_reality_label: "الواقع:", wwt_reality_text: "خطوة استراتيجية قد تساعد المتعلم على اكتشاف اهتماماته، وبناء الثقة، وتطوير المهارات.",
-    wwt_reflection_prompt: "💬 ما الأسئلة التي يمكنني طرحها على المدرسة أو الكلية أو جهة العمل لفهم ما إذا كان هذا المسار مناسبًا لطفلي؟",
-
-    // Sidenotes and Russell Group explanation
-    other_options_note: "⚙️ توجد أيضًا مسارات أخرى مثل البرامج المدعومة والدورات التأسيسية ومبادرات إعادة الاندماج، وهي مصممة لدعم المتعلمين ذوي الاحتياجات الإضافية أو ظروف الحياة المعقدة.",
-    russell_group_explainer: "🎓 *جامعات Russell Group هي جامعات بريطانية رائدة تشتهر بجودة البحث والتعليم. بعض الطلاب يفضلونها، لكن هناك العديد من الجامعات الرائعة الأخرى المناسبة لاحتياجات مختلفة.*",
-
-    // Side 2 reflection
-    side2_title: "كيف يمكنني دعم طفلي؟",
-    side2_reflection: "قم باختيار سؤال واحد على الأقل من كل قسم أدناه وناقشه مع طفلك أو المدرسة أو مستشار مهني.",
-    side2_section1: "ما الذي يجب أن أستكشفه؟",
-    side2_section2: "ما الذي يجب أن أسأله؟",
-    side2_section3: "من يمكنه مساعدتي؟",
-    side2_prompt1: "💭 هل هناك كلية أو مسار لا أفهمه؟ من يمكنني التحدث إليه؟",
-    side2_prompt2: "❓ ما الأسئلة التي أحتاج إلى إجابة عنها؟ ماذا يهمنا أكثر – المسافة؟ بيئة التعلم؟ الدعم؟ الخيارات المستقبلية؟",
-    side2_prompt3: "🤝 من حولي يمكنه دعم هذه المحادثة – داخل المدرسة، في العائلة، في المجتمع؟"
-}
-
-
             bn: { // বাংলা (Bengali)
                 doc_title: "আপনার সন্তানের পরবর্তী পদক্ষেপগুলি সমর্থন করা: একাদশ শ্রেণীর পরে ১৬+ বিকল্প",
                 main_title_part1: "আপনার ভবিষ্যত উন্মোচিত:",
