--- a/index.html
+++ b/index.html
@@ -742,6 +742,125 @@
                 parent_who_to_talk_prompt: "З ким ми можемо поговорити за підтримкою?",
                 who_to_talk_prompt_text: "💡 **Навідна думка:** Хто у житті вашої дитини (або у вашій мережі) міг би запропонувати цінні поради або заохочення? Подумайте про кар'єрних консультантів, вчителів, друзів сім'ї або наставників.",
             },
+            ar: { // العربية (Arabic)
+                doc_title: "دعم الخطوات التالية لطفلك: خيارات ما بعد 16 عامًا بعد الصف 11",
+                main_title_part1: "مستقبلك بين يديك:",
+                main_title_part2: "تصفح مسارات ما بعد 16 عامًا",
+                intro_text: "قد يكون مساعدة طفلك في تحديد مساره بعد الصف 11 خطوة كبيرة. يشرح هذا الدليل الخيارات الرئيسية وكيف يمكنك دعم اختياراتهم.",
+
+                // Pathway Titles
+                al_title: "المستويات A",
+                btec_title: "بي تيك (BTECs)",
+                tlevel_title: "المستويات T",
+                ib_title: "البكالوريا الدولية (IB)",
+                app_title: "التدريب المهني (Apprenticeships)",
+                wwt_title: "العمل مع التدريب",
+
+                // Pathway Descriptions (brief)
+                al_description: "مواد أكاديمية، مثالية للمسارات الجامعية.",
+                btec_description: "تعتمد على الجانب العملي والواجبات، مع التركيز على المهارات المهنية.",
+                tlevel_description: "مزيج من التعلم الصفي والخبرة العملية الكبيرة.",
+                ib_description: "دراسة أكاديمية واسعة ذات تركيز عالمي، وغالباً ما تؤدي إلى الجامعة.",
+                app_description: "عمل مدفوع الأجر إلى جانب تدريب منظم لاكتساب المؤهلات.",
+                wwt_description: "عمل بمستوى الدخول يجمع بين التعلم بدوام جزئي أو المؤهلات.",
+
+                // Key Info & Realities Headers
+                al_key_info_header: "معلومات وحقائق أساسية:",
+                btec_key_info_header: "معلومات وحقائق أساسية:",
+                tlevel_key_info_header: "معلومات وحقائق أساسية:",
+                ib_key_info_header: "معلومات وحقائق أساسية:",
+                app_key_info_header: "معلومات وحقائق أساسية:",
+                wwt_key_info_header: "معلومات وحقائق أساسية:",
+
+                // A-levels details
+                al_what_label: "ما هو:", al_what_text: "دراسة أكاديمية عميقة لمدة عامين في 3-4 مواد.",
+                al_entry_label: "الالتحاق:", al_entry_text: "5+ شهادات GCSE بدرجة 4/C (أو أعلى في المواد المختارة).",
+                al_assessment_label: "التقييم:", al_assessment_text: "غالباً **اختبارات نهائية** (بعض الواجبات).",
+                al_progression_label: "التقدم:", al_progression_text: "المسار الأساسي لـ**الجامعة**، وأيضاً التدريب المهني العالي/الدرجة الجامعية.",
+                al_stereotype_label: "صورة نمطية:", al_stereotype_text: "\"فقط للجامعة\" / \"أكاديمي جداً\".",
+                al_reality_label: "الحقيقة:", al_reality_text: "يطور المهارات التحليلية، ويفتح العديد من الأبواب. ليس المسار *الوحيد* للجامعة.",
+                al_reflection_prompt: "💬 ما الذي يمكنني أن أسأله المدرسة، الكلية، أو صاحب العمل لأفهم بشكل أفضل ما إذا كان هذا المسار يناسب طفلي؟",
+
+                // BTECs details
+                btec_what_label: "ما هو:", btec_what_text: "تعلم تطبيقي في قطاعات محددة (مثل الصحة، الأعمال، الرياضة).",
+                btec_entry_label: "الالتحاق:", btec_entry_text: "تتطلب BTECs من المستوى 2 في كثير من الأحيان بعض شهادات GCSE بدرجة 3/D. تتطلب BTECs من المستوى 3 عادةً حوالي 5 شهادات GCSE بدرجة 4/C أو أعلى، بما في ذلك اللغة الإنجليزية والرياضيات.",
+                btec_entry_sidenote: "قد تختلف متطلبات القبول حسب الكلية والمسار الدراسي. تحقق دائماً من موقع الويب الخاص بالمزود.",
+                btec_assessment_label: "التقييم:", btec_assessment_text: "غالباً **واجبات، مشاريع** (بعض الامتحانات/العملية).",
+                btec_progression_label: "التقدم:", btec_progression_text: "مقبول لدى **الجامعات** (معادل 1-3 مستويات A)، التدريب المهني، أو التوظيف.",
+                btec_stereotype_label: "صورة نمطية:", btec_stereotype_text: "\"أسهل من المستويات A\" / \"ليس للجامعة\".",
+                btec_reality_label: "الحقيقة:", btec_reality_text: "صارم، يطور مهارات واقعية. رائع للتقييم المستمر والتطبيق العملي.",
+                btec_reflection_prompt: "💬 ما الذي يمكنني أن أسأله المدرسة، الكلية، أو صاحب العمل لأفهم بشكل أفضل ما إذا كان هذا المسار يناسب طفلي؟",
+
+                // T-Levels details
+                tlevel_what_label: "ما هو:", tlevel_what_text: "برامج فنية جديدة لمدة عامين. 80% دراسة صفية، 20% تدريب صناعي (45+ يومًا).",
+                tlevel_entry_label: "الالتحاق:", tlevel_entry_text: "عادة 5 شهادات GCSE بدرجة 4/C+، بما في ذلك اللغة الإنجليزية والرياضيات.",
+                tlevel_assessment_label: "التقييم:", tlevel_assessment_text: "امتحانات، تدريبات عملية، و**مشروع يحدده صاحب العمل**.",
+                tlevel_progression_label: "التقدم:", tlevel_progression_text: "معادل **3 مستويات A**، مقبول لدى العديد من الجامعات للدرجات ذات الصلة، التوظيف الماهر، أو التدريب المهني العالي.",
+                tlevel_stereotype_label: "صورة نمطية:", tlevel_stereotype_text: "\"فقط لمن لا يرغبون في الجامعة\".",
+                tlevel_reality_label: "الحقيقة:", tlevel_reality_text: "مصممة من قبل أصحاب العمل لمهارات جاهزة للوظيفة + خبرة حقيقية. العديد من الجامعات (بما في ذلك مجموعة راسل، الجامعات البحثية الرائدة في المملكة المتحدة) تقبلها.",
+                tlevel_reflection_prompt: "💬 ما الذي يمكنني أن أسأله المدرسة، الكلية، أو صاحب العمل لأفهم بشكل أفضل ما إذا كان هذا المسار يناسب طفلي؟",
+
+                // IB details
+                ib_what_label: "ما هو:", ib_what_text: "دبلوم عالمي لمدة عامين. 6 مواد (3 HL، 3 SL) + أساسيات (مقالة مطولة، نظرية المعرفة، CAS).",
+                ib_entry_label: "الالتحاق:", ib_entry_text: "درجات GCSE عالية (تختلف حسب المدرسة).",
+                ib_assessment_label: "التقييم:", ib_assessment_text: "مزيج من **الامتحانات والتقييمات الداخلية** (مثل المقالات، العروض التقديمية).",
+                ib_progression_label: "التقدم:", ib_progression_text: "ذو قيمة عالية للالتحاق بـ**الجامعة** في جميع أنحاء العالم (بما في ذلك أفضل الجامعات البريطانية) لاتساع نطاقه وتفكيره النقدي.",
+                ib_stereotype_label: "صورة نمطية:", ib_stereotype_text: "\"فقط للطلاب الدوليين\" / \"صعبة للغاية\".",
+                ib_reality_label: "الحقيقة:", ib_reality_text: "تعليم ممتاز ومتوازن، إعداد قوي للجامعة، منظور عالمي.",
+                ib_reflection_prompt: "💬 ما الذي يمكنني أن أسأله المدرسة، الكلية، أو صاحب العمل لأفهم بشكل أفضل ما إذا كان هذا المسار يناسب طفلي؟",
+
+                // Apprenticeships details
+                app_what_label: "ما هو:", app_what_text: "وظيفة حقيقية، راتب حقيقي + تدريب (20% دراسة خارج العمل). المستويات 2-7 (معادل GCSE إلى الماجستير).",
+                app_entry_label: "الالتحاق:", app_entry_text: "يختلف حسب المستوى/صاحب العمل. يمكن أن يكون GCSE أو التركيز على السلوك.",
+                app_assessment_label: "التقييم:", app_assessment_text: "تقييم مستمر في مكان العمل، ملف أعمال، **تقييم نهائي**.",
+                app_progression_label: "التقدم:", app_progression_text: "**التوظيف الماهر** المباشر، أو التدريب المهني بمستوى أعلى (بما في ذلك التدريب المهني الجامعي).",
+                app_stereotype_label: "صورة نمطية:", app_stereotype_text: "\"فقط للمهن اليدوية\" / \"أقل أكاديمية\".",
+                app_reality_label: "الحقيقة:", app_reality_text: "مئات الصناعات (التكنولوجيا، المالية، القانون، الإبداع). احصل على شهادة بدون ديون. خبرة ذات قيمة عالية.",
+                app_reflection_prompt: "💬 ما الذي يمكنني أن أسأله المدرسة، الكلية، أو صاحب العمل لأفهم بشكل أفضل ما إذا كان هذا المسار يناسب طفلي؟",
+
+                // Work with Training details
+                wwt_what_label: "ما هو:", wwt_what_text: "توظيف مباشر (مدفوع الأجر/تطوعي) + كلية بدوام جزئي أو تدريب بقيادة صاحب العمل.",
+                wwt_entry_label: "الالتحاق:", wwt_entry_text: "يختلف على نطاق واسع حسب الوظيفة/التدريب. غالباً ما يتطلب معرفة أساسية بالقراءة والكتابة والحساب.",
+                wwt_assessment_label: "التقييم:", wwt_assessment_text: "تقييمات مهنية، واجبات، أو امتحانات GCSE/المهارات الوظيفية.",
+                wwt_progression_label: "التقدم:", wwt_progression_text: "يبني خبرة ومهارات عمل فورية. يمكن أن يؤدي إلى التدريب المهني، التعليم الإضافي، أو النمو الوظيفي.",
+                wwt_stereotype_label: "صورة نمطية:", wwt_stereotype_text: "\"مجرد وظيفة، ليس مسارًا حقيقيًا\".",
+                wwt_reality_label: "الحقيقة:", wwt_reality_text: "استقلالية سريعة ومهارات عملية. غالباً ما يتضمن دعماً لشهادات GCSE الأساسية (الإنجليزية/الرياضيات)، مما يفتح أبواب المستقبل.",
+                wwt_reflection_prompt: "💬 ما الذي يمكنني أن أسأله المدرسة، الكلية، أو صاحب العمل لأفهم بشكل أفضل ما إذا كان هذا المسار يناسب طفلي؟",
+
+                // Other Pathways Sidenote
+                other_pathways_title: "مسارات أخرى",
+                other_pathways_content: "قد يكون بعض الطلاب مناسبين للتدريب المهني المدعوم أو التدريب الداخلي المدعوم، خاصة إذا كان لديهم EHCP أو احتياجات إضافية. يتضمن ذلك تدريبًا وظيفيًا وتدريبًا أثناء العمل. تحدث إلى مدرستك أو خدمة التوجيه المهني المحلية لاستكشاف ما هو متاح.",
+
+                // Side 2 Headers
+                reflect_header: "دعونا نفكر: دعم الخطوة التالية لطفلك",
+                learning_style_question: "ما هو أسلوب تعلم طفلك؟",
+                learning_style_prompt: "💡 **نصيحة للتفكير:** كيف يتعلم طفلك بشكل طبيعي أفضل – بالممارسة، بالقراءة، بمناقشة الأفكار، أو بالمشاهدة؟ ما هي المواد الدراسية أو الهوايات التي تثير فضولهم؟",
+                label_learning_doing_parent: "عملي (بالفعل)",
+                label_learning_writing_parent: "أكاديمي (بالقراءة/الكتابة)",
+                label_learning_talking_parent: "تعاوني (بالحديث)",
+                label_learning_watching_parent: "ملاحظة (بالمشاهدة)",
+                label_learning_building_parent: "عملي (بالبناء)",
+                aspirations_question: "ما هي تطلعات طفلك؟",
+                aspirations_prompt: "💡 **نصيحة للتفكير:** بالإضافة إلى المؤهلات، ما الذي يحفز طفلك حقًا؟ ما نوع العمل الذي سيشعرهم بالإنجاز، أو ما نوع التأثير الذي يأملون في إحداثه؟",
+                label_goal_university_parent: "الذهاب إلى الجامعة",
+                label_goal_earn_money_parent: "كسب المال والتعلم",
+                label_goal_real_experience_parent: "اكتساب خبرة في العالم الحقيقي",
+                label_goal_try_different_parent: "استكشاف مسارات مختلفة",
+
+                compare_decide_header: "تحدثوا عنها معاً",
+                good_fit_question: "ما هو/هي الخيار/الخيارات الذي/التي يشعر طفلك أنه/أنها مناسب/ة له/لها الآن؟",
+                good_fit_prompt: "💡 **نصيحة للتفكير:** أي من هذه المسارات يثير حماس طفلك حقًا؟ أي منها يتوافق مع نقاط قوته، حتى لو بدا تحديًا بسيطًا؟",
+                learn_more_question: "ما هي الأسئلة التي يمكن أن تساعدنا على الشعور بثقة أكبر في اختياراتنا؟",
+                talk_through_learn_more_prompt: "💡 **نصيحة للتفكير:** ما هي التفاصيل المحددة حول المسار التي ستجعل أنت وطفلك تشعران بأمان أكبر في القرار؟ على سبيل المثال، حول التقدم، الحياة اليومية، أو أنظمة الدعم؟",
+
+                next_steps_header: "ما يمكنك فعله لاحقًا",
+                parent_next_step_prompt: "ما هو الشيء الصغير الذي يمكنني فعله هذا الأسبوع لدعم رحلة طفلي؟",
+                next_step_prompt_text: "💡 **نصيحة للتفكير:** للبدء، ما هي خطوة عملية وسهلة يمكنك اتخاذها؟ ربما تساعدهم في البحث عن كلية معينة، أو ترتيب محادثة مع شخص في مهنة يثير فضولهم؟",
+                parent_questions_prompt: "ما هي الأسئلة التي يمكن أن تساعدنا على الشعور بثقة أكبر في اختياراتنا؟",
+                parent_questions_prompt_text: "💡 **نصيحة للتفكير:** كوالد/والدة، ما هي الأسئلة المالية أو اللوجستية أو طويلة الأجل التي لديك حول هذه الخيارات؟ كيف يمكنك العثور على إجاباتها؟",
+                parent_who_to_talk_prompt: "هل هناك شخص يمكننا اللجوء إليه للحصول على المشورة (مثل مستشار مهني، معلم، صديق)؟",
+                who_to_talk_prompt_text: "💡 **نصيحة للتفكير:** من في حياة طفلك (أو شبكتك الخاصة) يمكنه تقديم رؤى قيمة أو تشجيع؟ فكر في مستشاري الوظائف، المعلمين، أصدقاء العائلة، أو المرشدين.",
+            },
             bn: { // বাংলা (Bengali)
                 doc_title: "আপনার সন্তানের পরবর্তী পদক্ষেপগুলি সমর্থন করা: একাদশ শ্রেণীর পরে ১৬+ বিকল্প",
                 main_title_part1: "আপনার ভবিষ্যত উন্মোচিত:",
