--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             </div>
         </div>
 
-        <div class="bg-gray-100 border-l-4 border-gray-400 p-4 rounded-md text-sm text-gray-800 mt-6 w-full max-w-5xl mx-auto">
+        <div class="bg-amber-100 border-l-4 border-amber-400 p-4 rounded-md text-sm text-amber-900 mt-6 w-full max-w-5xl mx-auto">
             <strong id="other_pathways_title"></strong>: <span id="other_pathways_content"></span>
         </div>
     </div>
