--- a/index.html
+++ b/index.html
@@ -276,16 +276,16 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 w-full max-w-5xl">
 
             <div class="option-card bg-sky-100 p-6 rounded-2xl shadow-lg border-b-4 border-sky-400 cursor-pointer">
-                <div class="w-full">
-                    <span class="text-6xl mb-4" role="img" aria-label="Compass Icon">🧭</span>
+                <div class="w-full mb-2">
+                    <span class="text-6xl" role="img" aria-label="Compass Icon">🧭</span>
                 </div>
-                <div class="w-full">
-                    <h2 class="text-2xl font-bold text-sky-800 mb-2" id="al_title">A-levels</h2>
+                <div class="w-full mb-1">
+                    <h2 class="text-2xl font-bold text-sky-800" id="al_title">A-levels</h2>
                 </div>
-                <div class="w-full">
+                <div class="w-full mb-4">
                     <p class="text-gray-700 text-lg" id="al_description">Academic subjects, ideal for university routes.</p>
                 </div>
-                <div class="w-full mt-4">
+                <div class="w-full">
                     <div class="card-details">
                         <h4 class="font-bold text-gray-800 mb-2" id="al_key_info_header">Key Info & Realities:</h4>
                         <ul>
@@ -304,16 +304,16 @@
             </div>
 
             <div class="option-card bg-emerald-100 p-6 rounded-2xl shadow-lg border-b-4 border-emerald-400 cursor-pointer">
-                <div class="w-full">
-                    <span class="text-6xl mb-4" role="img" aria-label="Gear Icon">⚙️</span>
+                <div class="w-full mb-2">
+                    <span class="text-6xl" role="img" aria-label="Gear Icon">⚙️</span>
                 </div>
-                <div class="w-full">
-                    <h2 class="text-2xl font-bold text-emerald-800 mb-2" id="btec_title">BTECs</h2>
+                <div class="w-full mb-1">
+                    <h2 class="text-2xl font-bold text-emerald-800" id="btec_title">BTECs</h2>
                 </div>
-                <div class="w-full">
+                <div class="w-full mb-4">
                     <p class="text-gray-700 text-lg" id="btec_description">Practical and coursework-based, focusing on vocational skills.</p>
                 </div>
-                <div class="w-full mt-4">
+                <div class="w-full">
                     <div class="card-details">
                         <h4 class="font-bold text-gray-800 mb-2" id="btec_key_info_header">Key Info & Realities:</h4>
                         <ul>
@@ -333,16 +333,16 @@
             </div>
 
             <div class="option-card bg-purple-100 p-6 rounded-2xl shadow-lg border-b-4 border-purple-400 cursor-pointer">
-                <div class="w-full">
-                    <span class="text-6xl mb-4" role="img" aria-label="Building Icon">🏢</span>
+                <div class="w-full mb-2">
+                    <span class="text-6xl" role="img" aria-label="Building Icon">🏢</span>
                 </div>
-                <div class="w-full">
-                    <h2 class="text-2xl font-bold text-purple-800 mb-2" id="tlevel_title">T-Levels</h2>
+                <div class="w-full mb-1">
+                    <h2 class="text-2xl font-bold text-purple-800" id="tlevel_title">T-Levels</h2>
                 </div>
-                <div class="w-full">
+                <div class="w-full mb-4">
                     <p class="text-gray-700 text-lg" id="tlevel_description">Mix of classroom learning and significant real work experience.</p>
                 </div>
-                <div class="w-full mt-4">
+                <div class="w-full">
                     <div class="card-details">
                         <h4 class="font-bold text-gray-800 mb-2" id="tlevel_key_info_header">Key Info & Realities:</h4>
                         <ul>
@@ -361,16 +361,16 @@
             </div>
 
             <div class="option-card bg-indigo-100 p-6 rounded-2xl shadow-lg border-b-4 border-indigo-400 cursor-pointer">
-                <div class="w-full">
-                    <span class="text-6xl mb-4" role="img" aria-label="Globe Icon">🌍</span>
+                <div class="w-full mb-2">
+                    <span class="text-6xl" role="img" aria-label="Globe Icon">🌍</span>
                 </div>
-                <div class="w-full">
-                    <h2 class="text-2xl font-bold text-indigo-800 mb-2" id="ib_title">IB (International Baccalaureate)</h2>
+                <div class="w-full mb-1">
+                    <h2 class="text-2xl font-bold text-indigo-800" id="ib_title">IB (International Baccalaureate)</h2>
                 </div>
-                <div class="w-full">
+                <div class="w-full mb-4">
                     <p class="text-gray-700 text-lg" id="ib_description">Broad academic study with a global focus, often leading to university.</p>
                 </div>
-                <div class="w-full mt-4">
+                <div class="w-full">
                     <div class="card-details">
                         <h4 class="font-bold text-gray-800 mb-2" id="ib_key_info_header">Key Info & Realities:</h4>
                         <ul>
@@ -389,16 +389,16 @@
             </div>
 
             <div class="option-card bg-amber-100 p-6 rounded-2xl shadow-lg border-b-4 border-amber-400 cursor-pointer">
-                <div class="w-full">
-                    <span class="text-6xl mb-4" role="img" aria-label="Wrench Icon">🛠️</span>
+                <div class="w-full mb-2">
+                    <span class="text-6xl" role="img" aria-label="Wrench Icon">🛠️</span>
                 </div>
-                <div class="w-full">
-                    <h2 class="text-2xl font-bold text-amber-800 mb-2" id="app_title">Apprenticeships</h2>
+                <div class="w-full mb-1">
+                    <h2 class="text-2xl font-bold text-amber-800" id="app_title">Apprenticeships</h2>
                 </div>
-                <div class="w-full">
+                <div class="w-full mb-4">
                     <p class="text-gray-700 text-lg" id="app_description">Paid work alongside structured training to gain qualifications.</p>
                 </div>
-                <div class="w-full mt-4">
+                <div class="w-full">
                     <div class="card-details">
                         <h4 class="font-bold text-gray-800 mb-2" id="app_key_info_header">Key Info & Realities:</h4>
                         <ul>
@@ -417,16 +417,16 @@
             </div>
 
             <div class="option-card bg-teal-100 p-6 rounded-2xl shadow-lg border-b-4 border-teal-400 cursor-pointer">
-                <div class="w-full">
-                    <span class="text-6xl mb-4" role="img" aria-label="Briefcase with Person Icon">👨‍💼</span>
+                <div class="w-full mb-2">
+                    <span class="text-6xl" role="img" aria-label="Briefcase with Person Icon">👨‍💼</span>
                 </div>
-                <div class="w-full">
-                    <h2 class="text-2xl font-bold text-teal-800 mb-2" id="wwt_title">Work with Training</h2>
+                <div class="w-full mb-1">
+                    <h2 class="text-2xl font-bold text-teal-800" id="wwt_title">Work with Training</h2>
                 </div>
-                <div class="w-full">
+                <div class="w-full mb-4">
                     <p class="text-gray-700 text-lg" id="wwt_description">Entry-level work combined with part-time learning or qualifications.</p>
                 </div>
-                <div class="w-full mt-4">
+                <div class="w-full">
                     <div class="card-details">
                         <h4 class="font-bold text-gray-800 mb-2" id="wwt_key_info_header">Key Info & Realities:</h4>
                         <ul>
@@ -1084,7 +1084,7 @@
                 wwt_progression_label: "ترقی:", wwt_progression_text: "فوری کام کا تجربہ اور مہارتیں بناتا ہے۔ اپرینٹس شپ، مزید تعلیم، یا کمپنی کے اندر کیریئر کی ترقی کا باعث بن سکتا ہے۔",
                 wwt_stereotype_label: "روایتی سوچ:", wwt_stereotype_text: "\"صرف ایک نوکری، صحیح راستہ نہیں۔\"",
                 wwt_reality_label: "حقیقت:", wwt_reality_text: "فوری خود مختاری اور عملی مہارتوں کے لیے بہترین۔ اکثر ضروری جی سی ایس ای (انگریزی/ریاضی) حاصل کرنے کے لیے مدد شامل ہوتی ہے، جو مستقبل کے دروازے کھولتی ہے۔",
-                wwt_reflection_prompt: "💬 میں اسکول، کالج، یا آجر سے کیا پوچھ سکتا ہوں تاکہ بہتر طور پر سمجھ سکوں کہ یہ راستہ میرے بچے کے لیے موزوں ہے یا نہیں؟",
+                wwt_reflection_prompt: "💬 میں اسکول، کالج، یا آجر سے کیا پوچھ سکتا ہوں تاکہ بہتر طور पर سمجھ سکوں کہ یہ راستہ میرے بچے کے لیے موزوں ہے یا نہیں؟",
 
                 // Other Pathways Sidenote
                 other_pathways_title: "دیگر راستے",
